--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,37 @@
 <resources>
-    <string name="app_name">QRCodeScanner</string>
+    <string name="app_name" translatable="false">QRCodeScanner</string>
     <!-- TODO: Remove or change this placeholder text -->
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="vibration">Vibration</string>
+    <string name="turn_on_off_mobile_vibration">Turn On / Off Mobile Vibration</string>
+    <string name="others">Others</string>
+    <string name="settings">Settings</string>
+    <string name="general">General</string>
+
+    <!-- in strings.xml -->
+    <string name="choose_language" translatable="false">Choose Language</string>
+
+
+    <string name="setting_vibration_title">Vibration</string>
+    <string name="setting_vibration_desc">Turn On / Off Mobile Vibration</string>
+
+    <string name="setting_sound_title">Sound</string>
+    <string name="setting_sound_desc">Turn On / Off Mobile Sound</string>
+
+    <string name="setting_auto_copy_title">Auto Copy to clipboard</string>
+    <string name="setting_auto_copy_desc">Turn On / Off Auto Copy</string>
+
+    <string name="setting_auto_web_title">Auto Web Search</string>
+    <string name="setting_auto_web_desc">Turn On / Off Auto Search</string>
+
+    <string name="setting_save_history_title">Save History</string>
+    <string name="setting_save_history_desc">Turn On / Off Save History</string>
+
+    <string name="tap_to_encourage_us">Tap to encourage us</string>
+    <string name="rate_us">Rate Us</string>
+    <string name="privacy_policy">Privacy Policy</string>
+    <string name="view_our_privacy_terms">View our privacy terms</string>
     <!---->
 
 </resources>
